correccion de logo en food-modal

--- a/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
+++ b/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
@@ -6,7 +6,7 @@
 
     <div class=" mt-[22px] ml-[24px]  w-[155px] h-[68px] ">
         <div class="flex">
-            <h1 class=" font-medium tracking-tight text-[22px]">{{item.name | uppercase}}</h1>
+            <h1 class=" font-medium tracking-tight text-[22px] leading-none">{{item.name | uppercase}}</h1>
             <span class="text-[14px] mt-[8px] ml-[3px]">{{item.address}}</span>
         </div>
         <p class="text-[12px] leading-4 tracking-widest">{{item.description}}
