--- a/client/NoWait/src/app/pages/locals/shop.component.html
+++ b/client/NoWait/src/app/pages/locals/shop.component.html
@@ -1,7 +1,7 @@
 <div class="pt-[--m-t-content] text-yanone w-full mb-9 bg-transparent">
 
-    <div class="flex font-abc w-[390px] pt-[32px] md:flex-row">
-        <h1 class="text-[16px] ml-8 mr-4">LOCALES</h1>
+    <div class="flex font-medium text-[20px] w-[390px] pt-[32px] md:flex-row justify-center items-center mx-auto">
+        <h1 class="text-[16px] ml-8 mr-4 text-center">LOCALES</h1>
     </div>
 
     <div class="flex flex-col w-full items-center justify-center gap-6 px-6 mt-4 md:flex-row md:flex-wrap">
