--- a/client/NoWait/src/app/app.component.html
+++ b/client/NoWait/src/app/app.component.html
@@ -2,6 +2,7 @@
 <main class="min-h-[--min-main-container] w-full relative pb-[--space-h-foote] md:pb-0">
 
   <router-outlet></router-outlet>
+  <app-notification></app-notification>
 </main>
 <div class="absolute top-0 right-0 w-full h-full overflow-hidden -z-40">
   <img src="assets/rayetas/rayetarojaCirculo.png" alt="" class="relative top-96 -z-40" />
