--- a/client/NoWait/src/app/pages/create-order/create-order.component.html
+++ b/client/NoWait/src/app/pages/create-order/create-order.component.html
@@ -1,1 +1,18 @@
-<p>create-order works!</p>
+<div
+    class="relative flex flex-col justify-center items-center w-full min-h-[--min-main-container] pt-[--m-t-content] text-yanone">
+    @if(!showLoadingModal()){
+    <div
+        class="relative flex flex-col bg-[--primary] m-auto w-[calc(100%_-_72px)] max-w-[400px] rounded-2xl p-7 shadow-md drop-shadow text-yanone">
+        <div class="text-center uppercase text-[1.2rem] mb-4">{{messageResul()}}</div>
+        <div>
+            <button (click)="goHome()"
+                class="block w-max m-auto font-bold text-[1.2rem] justify-center text-black rounded-2xl py-2 px-10 border-4 bg-[#F4DA5D] border-[#F4DA5D] shadow drop-shadow hover:text-black hover:bg-white text-yanane uppercase leading-none"
+                type="button"> Ir a Inicio
+            </button>
+        </div>
+
+    </div>
+    }
+
+</div>
+<app-loading-modal [showModal]="showLoadingModal" [message]="message"></app-loading-modal>
