correccion de tipo de texto

--- a/client/NoWait/src/app/pages/home/components/banner-home/banner-home.component.html
+++ b/client/NoWait/src/app/pages/home/components/banner-home/banner-home.component.html
@@ -39,7 +39,7 @@
           <path d="M4,6h3l-2,4c0,1.105-0.895,2-2,2s-2-0.895-2-2L4,6z" />
         </g>
       </svg>
-      <samp class="pl-2">Lista de Locales</samp>
+      <samp class="pl-2 text-yanone text-[1.5rem]">Lista de Locales</samp>
     </button>
     <!-- <button routerLink="/auth" class=" inline-flex items-center w-max h-10 justify-center text-lg text-yanone text-white rounded-2xl px-4 border-4 bg-[--info] shadow shadow-gray-500 drop-shadow hover:text-black hover:bg-white
                   border-[--info]" aria-controls="navbar-search" aria-expanded="false">
