--- a/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
+++ b/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
@@ -1,4 +1,5 @@
-<div class="bg-white w-[360px] h-[130px] flex rounded-lg drop-shadow-xl shadow-lg md:w-[380px] px-4 border">
+<a [routerLink]="['/','shop',item.shopId]"
+    class="bg-white w-[360px] h-[130px] flex rounded-lg drop-shadow-xl shadow-lg md:w-[380px] px-4 border">
     <div>
         <img class="w-[108px] h-[108px] my-[11px] rounded-full object-cover shadow-md shadow-zinc-300"
             [src]="item.imageUrl" (error)="errorHandler($event)" />
@@ -13,4 +14,4 @@
         </p>
     </div>
 
-</div>
+</a>
