acordion de resultados de busqueda

--- a/client/NoWait/src/app/pages/search/search.component.html
+++ b/client/NoWait/src/app/pages/search/search.component.html
@@ -5,41 +5,15 @@
         <span>{{qSearch()| uppercase}}</span>
     </div>
 
-    <div class="flex flex-col w-full justify-center gap-6 px-6 mt-4 md:flex-row md:flex-wrap">
+    <div class="flex flex-col w-full justify-center items-center gap-6 px-6 mt-4 md:flex-row md:flex-wrap">
         @if (finishSearch()) {
         <!-- card de los resultados -->
         @for (shop of listResult(); track $index) {
-        <div class="w-[360px] relative md:w-[380px]">
-            <!-- Local -->
+        <app-wraper-food-results [shop]="shop" (emitSelectedFood)="$event">
             <app-card-shop [item-resul]="shop"></app-card-shop>
-            @if (shop.menuFilteredResults.length > 0) {
-            <div
-                class="flex bg-white flex-row w-full h-[120px] overflow-x-auto border-b-2 border-x-2 border-[--primary] rounded-b-2xl pl-4 py-2 gap-4">
-                <!-- Comidas que coinciden con la busqueda -->
-                @for (food of shop.menuFilteredResults; track $index) {
-                <div class="flex flex-none items-center bg-white h-full border-x-2 px-2 py-2 cursor-pointer"
-                    (click)="openInFoodModal(food, shop.imageUrl, shop.name, shop.address)">
-                    <div>
-                        <img class="block bg-black size-[96px] rounded-xl" [src]="food.imageUrl" alt=""
-                            (error)="errorHandlerFood($event)">
-                    </div>
-                    <div class="pl-4 pt-4 w-[150px] h-full overflow-hidden">
-                        <div class="text-[1.1rem] font-medium truncate">{{food.name| uppercase}}</div>
-                        <p>$ <span class="pl-1">{{food.price}}</span></p>
-                    </div>
-                </div>
-                }
-            </div>
-            <button class="absolute bottom-[120px] right-0 text-white bg-[--primary] p-1 pl-2 rounded-tl-xl"
-                type="button">
-                <span>{{shop.menuFilteredResults.length}}</span>
-                <svg class="inline-block fill-white size-4 ml-1" viewBox="0 0 512 512" width="512">
-                    <path
-                        d="M456.69,421.39,362.6,327.3a173.81,173.81,0,0,0,34.84-104.58C397.44,126.38,319.06,48,222.72,48S48,126.38,48,222.72s78.38,174.72,174.72,174.72A173.81,173.81,0,0,0,327.3,362.6l94.09,94.09a25,25,0,0,0,35.3-35.3ZM97.92,222.72a124.8,124.8,0,1,1,124.8,124.8A124.95,124.95,0,0,1,97.92,222.72Z" />
-                </svg>
-            </button>
-            }
-        </div>
+        </app-wraper-food-results>
+        <!-- Local -->
+
 
         }
         @empty {
